--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link
     rel="stylesheet"
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-5 col-md-6 about-left" style="width: auto;">
-                <img class="img-fluid" src="profile.jpg" alt="My Profile Picture">
+                <img class="img-fluid" src="img/profile.jpg" alt="My Profile Picture">
             </div>
             <div class="offset-lg-1 col-lg-6 offset-md-0 col-md-12 about-right">
                 <h1>
