--- a/index.html
+++ b/index.html
@@ -56,72 +56,47 @@
         </div>
     </div>
 </section>
-<section id ="projects">
-    <div class="project-header">
-        <h3> Here Are Some Of My Projects</h3>
-      </div>
-      <div class="row row-cols-1 row-cols-md-3">
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/xpenser.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Xpenser</h5>
-            <p class="card-text">Keep Track Of Your Daily Expenses At One Place.</p>
-            <a href="https://xpenser.netlify.app" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/lyrical.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Lyrical</h5>
-              <p class="card-text">Find Lyrics Of All Your Favourite Song Here.</p>
-              <a href="https://getlyrical.netlify.app" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/tribute.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Tribute Page</h5>
-              <p class="card-text">A Tribute Page To One And Only Bill Gates.</p>
-              <a href="https://codepen.io/lucky0108/pen/gOPpdON" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/document.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Technical Documentation</h5>
-              <p class="card-text">Documentation Page For JavaScript.</p>
-              <a href="https://codepen.io/lucky0108/pen/oNbbeRJ" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/landing.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Product Landing Page</h5>
-              <p class="card-text">A Product Landing Page For Demo Product.</p>
-              <a href="https://codepen.io/lucky0108/pen/LYGpaJj" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="img/form.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Survey Form</h5>
-              <p class="card-text">A Sample Survey Form.</p>
-              <a href="https://codepen.io/lucky0108/pen/QWyjwzv" class="btn btn-primary">Visit Here.</a>
-            </div>
-          </div>
-        </div>
-      </div>
+<section id="projects" class="projects-section">
+  <h2 class="project-header">These are some of my projects</h2>
+
+  <div class="projects-grid">
+    <div class="project project-tile">
+      <img src="img/lyrical.png" class="card-img-top" alt="...">
+      <p class="project-title"> Lyrical App </p>
+      <p class="card-text" style="color: black;">Find Lyrics Of All Your Favourite Song Here.</p>
+      <a href="https://getlyrical.netlify.app" class="btn btn-primary">Visit Here.</a>
+   </div>
+   <div class="project project-tile">
+    <img src="img/xpenser.png" class="card-img-top" alt="...">
+    <p class="project-title"> Xpenser App </p>
+    <p class="card-text" style="color: black;">Keep Track Of Your Daily Expenses At One Place.</p>
+    <a href="https://xpenser.netlify.app" class="btn btn-primary">Visit Here.</a>
+   </div> 
+   <div class="project project-tile">
+    <img src="img/tribute.png" class="card-img-top" alt="...">
+      <p class="project-title"> Tribute Page </p>
+      <p class="card-text" style="color: black;">A Tribute Page To One And Only Bill Gates.</p>
+      <a href="https://codepen.io/lucky0108/pen/gOPpdON" class="btn btn-primary">Visit Here.</a>
+   </div>
+   <div class="project project-tile">
+    <img class="project-image" src="img/document.png" alt="project" />
+    <p class="project-title"> Technical Documentation Page </p>
+    <p class="card-text" style="color: black;">Documentation Page For JavaScript.</p>
+    <a href="https://codepen.io/lucky0108/pen/oNbbeRJ" class="btn btn-primary">Visit Here.</a>
+ </div>
+ <div class="project project-tile">
+  <img class="project-image" src="img/landing.png" alt="project" />
+  <p class="project-title"> Product Landing Page </p>
+  <p class="card-text" style="color: black;">A Product Landing Page For Demo Product.</p>
+  <a href="https://codepen.io/lucky0108/pen/LYGpaJj" class="btn btn-primary">Visit Here.</a>
+</div>
+<div class="project project-tile">
+  <img class="project-image" src="img/form.png" alt="project" />
+  <p class="project-title"> Survey Form </p>
+  <p class="card-text" style="color: black;">A Sample Survey Form.</p>
+  <a href="https://codepen.io/lucky0108/pen/QWyjwzv" class="btn btn-primary">Visit Here.</a>
+</div>
+</div>
 </section>
 <section id="contact">
   <div class="contact-header">
