--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/landing.png" class="card-img-top" alt="Tribute Page">
+        <img src="img/tribute.png" class="card-img-top" alt="Tribute Page">
         <div class="card-body">
           <h5 class="card-title">Tribute Page</h5>
           <p class="card-text">A tribute Page For One and Only Bill Gates.</p>
