--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <section id="About">
 <div class="conatiner">
-    <div class="row align-items-center justify-content-center">
+    <div style="margin-right:0px;" class="row align-items-center justify-content-center">
       <div class="col-lg-5 col-md-6 about-left" style="width: auto;">
       <div class="welcome_text">
         <h4>About Myself</h4>
