--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="row row-cols-1 row-cols-md-3" style="padding-top: 50px; padding-bottom: 50px;">
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/xpenser.png" class="card-img-top" alt="...">
+        <img src="img/xpenser.JPG" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Xpenser</h5>
           <p class="card-text">Calculate And Keep A Track Of Your Daily Expenses at one place</p>
@@ -159,7 +159,7 @@
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/lyrical.png" class="card-img-top" alt="Lyrics Webpage">
+        <img src="img/lyrical.JPG" class="card-img-top" alt="Lyrics Webpage">
         <div class="card-body">
           <h5 class="card-title">Lyrical</h5>
           <p class="card-text">Get Lyrics Of All Your Favorite Song At A SIngle Place.</p>
@@ -169,41 +169,71 @@
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/tribute.png" class="card-img-top" alt="Tribute Page">
+        <img src="img/softcopy.JPG" class="card-img-top" alt="Documentation Page Project">
         <div class="card-body">
-          <h5 class="card-title">Tribute Page</h5>
-          <p class="card-text">A tribute Page For One and Only Bill Gates.</p>
-          <a href="https://codepen.io/lucky0108/pen/gOPpdON" class="btn btn-primary"  target="_blank">Visit Here</a>
+          <h5 class="card-title">Soft Copy</h5>
+          <p class="card-text">Soft copy is a full stack Website for students to download engineering notes.</p>
+          <a href="https://softcopy.online/"  class="btn btn-primary"  target="_blank">Visit Here</a>
         </div>
       </div>
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/document.png" class="card-img-top" alt="Documentation Page Project">
+        <img src="img/track.JPG" class="card-img-top" alt="Tribute Page">
         <div class="card-body">
-          <h5 class="card-title">Documentation Page</h5>
-          <p class="card-text">A Demo Documentation Page For JavaScript Language.</p>
-          <a href="https://codepen.io/lucky0108/pen/oNbbeRJ"  class="btn btn-primary"  target="_blank">Visit Here</a>
+          <h5 class="card-title">Corona Cases Tracker</h5>
+          <p class="card-text">A Live Tracker of Corona Virus Cases All Over India. </p>
+          <a href="https://coronacases.000webhostapp.com/" class="btn btn-primary"  target="_blank">Visit Here</a>
         </div>
       </div>
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/landing.png" class="card-img-top" alt="Product Landing Page project">
+        <img src="img/landing.JPG" class="card-img-top" alt="Product Landing Page project">
         <div class="card-body">
           <h5 class="card-title">Product Landing Page</h5>
           <p class="card-text">A Product Landing Page For A Demo Company.</p>
-          <a href="  https://codepen.io/lucky0108/pen/LYGpaJj" class="btn btn-primary"  target="_blank">Visit Here</a>
+          <a href="https://planding.netlify.app/" class="btn btn-primary"  target="_blank">Visit Here</a>
         </div>
       </div>
     </div>
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/form.png" class="card-img-top" alt="Survey Form Project">
+        <img src="img/form.JPG" class="card-img-top" alt="Survey Form Project">
         <div class="card-body">
           <h5 class="card-title">Survery Form</h5>
           <p class="card-text">A Sample Survey Form For FreeCodeCamp Website.</p>
-          <a href="https://codepen.io/lucky0108/pen/QWyjwzv" class="btn btn-primary"  target="_blank">Visit Here</a>
+          <a href="https://fccform.netlify.app/" class="btn btn-primary"  target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/document.JPG" class="card-img-top" alt="Documentation Page Project">
+        <div class="card-body">
+          <h5 class="card-title">Documentation Page</h5>
+          <p class="card-text">A Demo Documentation Page For JavaScript Language.</p>
+          <a href="https://jsdocument.netlify.app/"  class="btn btn-primary"  target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/tribute.JPG" class="card-img-top" alt="Documentation Page Project">
+        <div class="card-body">
+          <h5 class="card-title">Tribute Page</h5>
+          <p class="card-text">A Tribute Page For One And Only Bill Gates.</p>
+          <a href="https://bgtribute.netlify.app/"  class="btn btn-primary"  target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/learnjs.JPG" class="card-img-top" alt="Documentation Page Project">
+        <div class="card-body">
+          <h5 class="card-title">Learn Basic JS</h5>
+          <p class="card-text">A Page For you to learn Basics of JavaScript.</p>
+          <a href="https://learnjsbasics.netlify.app/"  class="btn btn-primary"  target="_blank">Visit Here</a>
         </div>
       </div>
     </div>
@@ -219,22 +249,40 @@
   <p> Where would you like to get connected? </p>
     <div class="contact-links">
       <a class="cbtn" id="profile-link" href="https://www.facebook.com/xxLakshayxx" target="_blank">
-        <i style="color: #3b5998;" class="fab fb fa-facebook"></i> Facebook </a> 
+        <i style="color: #3b5998;" class="fab fb fa-facebook"></i></a> 
         <a id="profile-link" class="cbtn" href="https://github.com/Lucky0108/" target="_blank">
-            <i style="color: #1f1f1f !important;" class="fab fa-github"></i> Github </a> 
+            <i style="color: #1f1f1f !important;" class="fab fa-github"></i></a> 
             <a class="cbtn" id="profile-link" href="https://www.linkedin.com/in/lakshay-yadav/" target="_blank">
-                <i style="color: #2867B2;" class="fab fa-linkedin"></i> LinkedIn </a> 
+                <i style="color: #2867B2;" class="fab fa-linkedin"></i></a> 
                 <a class="cbtn" id="profile-link" href="https://instagram.com/lakshayy.yyadav" target="_blank">
-                    <i  class="fab ins fa-instagram"></i> Instagram </a> 
+                    <i  class="fab ins fa-instagram"></i></a> 
                     <a class="cbtn tweet" id="profile-link" href="https://twitter.com/lxkshay" target="_blank">
-                      <i style="color:#1DA1F2;" class="fab fa-twitter"></i> Twitter </a> 
+                      <i style="color:#1DA1F2;" class="fab fa-twitter"></i></a> 
   </div>
+  <div>
+    <h2 class="my-5 or">OR</h2>
+  </div>
+  <form class="cform" action="https://formspree.io/xrgyyzde" method="POST">
+  
+   <label for="Name">
+     Name:
+   </label>
+   <input type="text" name="Name" placeholder="Enter Your Name" required /> 
+   <label for="Email">
+    Email:
+  </label>
+  <input type="text" name="Email" placeholder="Enter Your Email" required />
+  <label for="Message">
+    Your message:
+  </label>
+  <textarea name="Message" placeholder="Enter Your Message Here..." required></textarea>
+
+  <button style="margin-bottom: 70px;" class="btn btn-success" type="submit">Send</button>
+
+  </form>
 </section>
 <footer>
     <p class="mt-3">&copy; Created By Lakshay Yadav.</p>
 </footer> 
-<script>
-
-</script>
 </body>
 </html>
