--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="col-lg-5 col-md-6 about-left" style="width: auto;">
       <div class="welcome_text">
         <h4>About Myself</h4>
-        <p>I am an 18 year old student who loves to binge watch web series, love to code, listen to rock music and I love to travel alone. <br>Also, I am Currently Pursuing B.Tech From Anand International College Of Engineerig, Jaipur.</p>
+        <p>I am an 18 year old code fanatic.<br>I love to binge watch web series, listen to rock music and travel alone.<br>Also, I am Currently Pursuing B.Tech From Anand International College Of Engineerig, Jaipur.</p>
       </div>
     </div>
     <div class="offset-lg-1 col-lg-6 offset-md-0 col-md-12 about-right">
