--- a/index.html
+++ b/index.html
@@ -149,7 +149,27 @@
   <div class="row row-cols-1 row-cols-md-3" style="padding-top: 50px; padding-bottom: 50px;">
     <div class="col mb-4">
       <div class="card text-center">
-        <img src="img/xpenser.JPG" class="card-img-top" alt="...">
+        <img src="img/luckart.png" class="card-img-top" alt="Luckart">
+        <div class="card-body">
+          <h5 class="card-title">Luckart</h5>
+          <p class="card-text">Frontend For A Ecommerce Site using React</p>
+          <a href="https://ecommclone.netlify.app" class="btn btn-primary" target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/gs.png" class="card-img-top" alt="Get Scheduled">
+        <div class="card-body">
+          <h5 class="card-title">Get Scheduled</h5>
+          <p class="card-text">A ToDO app made with MERN stack</p>
+          <a href="https://getscheduled.herokuapp.com/" class="btn btn-primary" target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/xpenser.JPG" class="card-img-top" alt="Xpenser">
         <div class="card-body">
           <h5 class="card-title">Xpenser</h5>
           <p class="card-text">Calculate And Keep A Track Of Your Daily Expenses at one place</p>
