--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#Home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#Home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#About"> About </a>
+              <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#About"> About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects"> Work </a>
+              <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#projects"> Work </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact"> Contact </a>
+              <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact"> Contact </a>
             </li>
            
           </ul>
