--- a/index.html
+++ b/index.html
@@ -304,5 +304,10 @@
 <footer>
     <p class="mt-3">&copy; Created By Lakshay Yadav.</p>
 </footer> 
+    <script>
+  $('.navbar-nav>li>a').on('click', function(){
+    $('.navbar-collapse').collapse('hide');
+});
+</script>
 </body>
 </html>
