--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
         </div>
       </div>
       <div class="skill_item">
-        <h4>Photoshop </h4>
+        <h4>React JS </h4>
         <div class="progress_br">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
           </div>
         </div>
       </div>
       <div class="skill_item">
-        <h4>Figma </h4>
+        <h4>Photoshop </h4>
         <div class="progress_br">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div>
           </div>
         </div>
       </div>
@@ -145,8 +145,18 @@
 
 
 <section id="projects">
-  <div class="container">
+  <div class="container-fluid">
   <div class="row row-cols-1 row-cols-md-3" style="padding-top: 50px; padding-bottom: 50px;">
+   <div class="col mb-4">
+      <div class="card text-center">
+        <img src="img/miracle.png" class="card-img-top" alt="Luckart">
+        <div class="card-body">
+          <h5 class="card-title">Miracle Solutions</h5>
+          <p class="card-text">A full stack MERN website for Digital Agency</p>
+          <a href="https://miracle-solutions.herokuapp.com" class="btn btn-primary" target="_blank">Visit Here</a>
+        </div>
+      </div>
+    </div>
     <div class="col mb-4">
       <div class="card text-center">
         <img src="img/luckart.png" class="card-img-top" alt="Luckart">
