--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="card-body">
           <h5 class="card-title">Soft Copy</h5>
           <p class="card-text">Soft copy is a full stack Website for students to download engineering notes.</p>
-          <a href="https://softcopy.online/"  class="btn btn-primary"  target="_blank">Visit Here</a>
+          <a href="http://softcopy.tech/"  class="btn btn-primary"  target="_blank">Visit Here</a>
         </div>
       </div>
     </div>
